--- a/mini_project/Games/Rock-Paper-Scissors/Style.css
+++ b/mini_project/Games/Rock-Paper-Scissors/Style.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-family: "JetBrains Mono", monospace;
 }
 body {
   width: 100%;
